# Regression

./: .gitignore  README.md  pyproject.toml  regression.html
regression/: LinearRegression.py  linear_regression.py  model_comparison.py  model_diagnostics.py
regression/algorithms/: bacon.py
regression/models/: linear_regression.py
regression/utils/: plotting.py
