[tool.poetry]
name = "regression"
version = "0.1.0"
description = "python package from regression analysis"
authors = ["Michael Bending <michael.a.bending@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">2.0"
scipy = ">=1.14"
pandas = "^2.3.3"
matplotlib = "^3.10.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.7"
mypy = "^1.18.2"
black = "^25.9.0"
scipy-stubs = "^1.16.2.0"
pandas-stubs = "^2.3.2.250926"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
